examples/type_system/failing/201_base_hof_callback_effect_missing_e400.flx
// E400: Base HOF callback effect requirement must be available in ambient context.

fn noisy_log(n: Int) -> Unit with IO {
    print("tick")
}

fn main() with Time {
    each([1, 2, 3], noisy_log)
}
